--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   php:
     build:
       context: .
-    image: yii2app-custom
+    image: kubemanan/yii2app-custom:latest
     ports:
       - '8000:80'
     networks:
